tests/invalid/data/i19_data_type.f
program baddata2
  logical l
  data l / 3 /
end
